# fgp

./: .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  install.sh  mkdocs.yml
.fgp/: marketplace.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  registry-sync.yml
Plans/: Doctrine_Coverage_2026-01-15.md  Test_Coverage_Expansion_2026-01-15.md  fgp-skill-platform.md
api/: .env.example  DOCTRINE.md  README.md  package.json  pnpm-lock.yaml  vercel.json
api/src/: index.ts
api/test/: jwt.test.mjs
app/: .gitignore  DOCTRINE.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
app-swift/: CLAUDE.md  Info.plist  Package.resolved  Package.swift
app-swift/FGPManager.xcodeproj/: project.pbxproj
app-swift/scripts/: build_app.sh  run-visual-tests.sh
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/resources/: registry.json
app/src-tauri/resources/mcp/: install.sh
app/src-tauri/resources/skill/: skill.md
app/src-tauri/src/: lib.rs  main.rs
apple-calendar/: CHANGELOG.md  Cargo.toml  DOCTRINE.md  README.md
apple-calendar/src/: lib.rs  main.rs
apple-calendar/src/calendar/: mod.rs  queries.rs
apple-calendar/src/daemon/: mod.rs  service.rs
apple-reminders/: CHANGELOG.md  Cargo.toml  DOCTRINE.md  README.md
apple-reminders/src/: lib.rs  main.rs
apple-reminders/src/daemon/: mod.rs  service.rs
apple-reminders/src/reminder/: mod.rs  queries.rs
benchmarks/: DOCTRINE.md  README.md  benchmark-graphic.html  generate_charts.py
blender/: COMPARISON.md  FUNCTIONAL_COMPARISON.md  README.md  manifest.json  pyproject.toml
blender/scripts/: benchmark.py  physics_playground_showcase.py  run_daemon.py  run_daemon_gui.py  run_daemon_gui_v2.py  showcase_demo.py
blender/src/fgp_blender/: __init__.py  jobs.py  main.py  service.py  session.py
blender/src/fgp_blender/handlers/: __init__.py  ai_generation.py  animation.py  camera.py  grease_pencil.py  io.py  material.py  mesh.py  object.py  physics.py  render.py  scene.py
cloudflare/: Cargo.toml  DOCTRINE.md  README.md  manifest.json
cloudflare/src/: main.rs  models.rs  service.rs
cloudflare/src/api/: client.rs  mod.rs
composio/: Cargo.toml  DOCTRINE.md  README.md  manifest.json
composio/src/: main.rs  models.rs  service.rs
contacts/: Cargo.toml  DOCTRINE.md  README.md
contacts/src/: lib.rs  main.rs
contacts/src/daemon/: mod.rs  service.rs
contacts/src/db/: connection.rs  mod.rs  queries.rs
discord/: Cargo.toml  DOCTRINE.md  README.md  manifest.json
discord/src/: main.rs  models.rs  service.rs
discord/src/api/: client.rs  mod.rs
docs/: Doctrine_Template.md  README.md  SKILL-IMPORT-DESIGN.md  doctrine_inventory_2026-01-15.md  index.md  test_inventory_2026-01-15.md
docs/daemons/: browser.md  calendar.md  github.md  gmail.md  imessage.md
docs/deployment/: docker.md  launchd.md  systemd.md
docs/development/: building-daemons.md  contributing.md
docs/getting-started/: concepts.md  (+2 more)
generator/: DOCTRINE.md  README.md  generate.py
google-docs/: Cargo.toml  DOCTRINE.md  README.md  manifest.json
google-drive/: Cargo.toml  DOCTRINE.md  README.md  manifest.json
google-drive/src/: main.rs  models.rs  service.rs
google-drive/src/api/: client.rs  mod.rs
google-sheets/: Cargo.toml  DOCTRINE.md  README.md  manifest.json
keychain/: CHANGELOG.md  Cargo.toml  DOCTRINE.md  README.md
keychain/src/: lib.rs  main.rs
keychain/src/daemon/: mod.rs  service.rs
keychain/src/keychain/: mod.rs  queries.rs
linear/: Cargo.toml  DOCTRINE.md  README.md
marketing/: reddit-claudecode-post.md
notes/: Cargo.toml  build.rs
notes/proto/: notestore.proto
notes/src/: lib.rs  main.rs
notes/src/daemon/: mod.rs  service.rs
notes/src/db/: connection.rs  mod.rs  queries.rs
notion/: Cargo.toml  DOCTRINE.md  README.md
ollama/: Cargo.toml
ollama/src/: main.rs  models.rs  service.rs
ollama/src/api/: client.rs  mod.rs
openai/: Cargo.toml
openai/src/: main.rs  models.rs  service.rs
openai/src/api/: client.rs  mod.rs
photos/: Cargo.toml  DOCTRINE.md  README.md
postgres/: README.md
registry/: Cargo.toml  DOCTRINE.md  Dockerfile  README.md  fly.toml
registry/migrations/: 001_initial_schema.sql  002_add_new_daemons.sql
registry/src/: db.rs  hash.rs  lib.rs  models.rs  security.rs  skill_import.rs  sync.rs
registry/src/api/: auth.rs  handlers.rs  main.rs  mod.rs  responses.rs  routes.rs  webhooks.rs
resend/: Cargo.toml
resend/src/: main.rs  models.rs  service.rs
resend/src/api/: client.rs  mod.rs
safari/: Cargo.toml  DOCTRINE.md  README.md
safari/src/: lib.rs  main.rs
safari/src/daemon/: mod.rs  service.rs
safari/src/db/: connection.rs  mod.rs  queries.rs
screen-time/: CHANGELOG.md  Cargo.toml  DOCTRINE.md  README.md
screen-time/src/: lib.rs  main.rs
screen-time/src/daemon/: mod.rs  service.rs
screen-time/src/screen_time/: mod.rs  queries.rs
scripts/: doctrine_inventory.py  sync-registry.ts  test_inventory.py
spotlight/: Cargo.toml  DOCTRINE.md  README.md
spotlight/src/: lib.rs  main.rs
spotlight/src/daemon/: mod.rs  service.rs
spotlight/src/spotlight/: mod.rs  queries.rs
sqlite/: Cargo.toml
sqlite/src/: db.rs  main.rs  service.rs
supabase/: Cargo.toml  DOCTRINE.md  README.md  manifest.json
supabase/src/: main.rs  models.rs  service.rs
supabase/src/api/: client.rs  mod.rs
system/: Cargo.toml  DOCTRINE.md  README.md
system/src/: lib.rs  main.rs
system/src/daemon/: mod.rs  service.rs
system/src/system/: mod.rs  queries.rs
travel/: Cargo.toml  DOCTRINE.md  README.md  manifest.json
website/: .gitignore  DOCTRINE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
youtube/: Cargo.toml  DOCTRINE.md  README.md  manifest.json
zapier/: Cargo.toml  DOCTRINE.md  README.md  manifest.json
(+143 files in other folders)
