[package]
name = "fgp-apple-calendar"
version = "1.0.0"
edition = "2021"
description = "FGP daemon for Apple Calendar via EventKit - fast native access to macOS calendar data"
license = "MIT"
authors = ["Wolfgang Schoenberger"]
repository = "https://github.com/fast-gateway-protocol/apple-calendar"
homepage = "https://github.com/fast-gateway-protocol"
keywords = ["calendar", "eventkit", "macos", "daemon", "fgp"]
categories = ["os::macos-apis", "development-tools"]

[dependencies]
# FGP daemon framework
fgp-daemon = { path = "../daemon" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Apple EventKit bindings
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSDate", "NSPredicate", "NSError", "block2"] }
objc2-event-kit = { version = "0.3", features = [
    "EKEventStore",
    "EKCalendar",
    "EKEvent",
    "EKCalendarItem",
    "EKObject",
    "EKSource",
    "EKParticipant",
    "EKAlarm",
    "EKRecurrenceRule",
    "EKRecurrenceEnd",
    "EKStructuredLocation",
] }
block2 = "0.6"

[[bin]]
name = "fgp-apple-calendar"
path = "src/main.rs"

[[bin]]
name = "fgp-apple-calendar-daemon"
path = "src/bin/fgp-apple-calendar-daemon.rs"
