[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fgp-blender"
version = "0.1.0"
description = "Fast Gateway Protocol daemon for Blender automation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wolfgang Schoenberger", email = "wolfgang@example.com"}
]
keywords = ["fgp", "daemon", "blender", "3d", "ai-agents", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "fgp-daemon>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]
assets = [
    "requests>=2.28",  # For Poly Haven / Sketchfab
]

[project.scripts]
fgp-blender = "fgp_blender.main:main"

[project.urls]
Homepage = "https://github.com/fast-gateway-protocol/blender"
Documentation = "https://github.com/fast-gateway-protocol/blender#readme"
Repository = "https://github.com/fast-gateway-protocol/blender"

[tool.hatch.build.targets.wheel]
packages = ["src/fgp_blender"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
