[package]
name = "fgp-discord"
version = "1.0.0"
edition = "2021"
description = "FGP daemon for Discord - fast bot operations"
authors = ["Wolfgang Schoenberger"]
license = "MIT"
repository = "https://github.com/fast-gateway-protocol/discord"

[[bin]]
name = "fgp-discord"
path = "src/main.rs"

[dependencies]
fgp-daemon = { path = "../daemon" }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
daemonize = "0.5"
shellexpand = "3.1"
dirs = "6.0"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
