[package]
name = "fgp-ollama"
version = "0.1.0"
edition = "2021"
description = "FGP daemon for local Ollama LLM operations"
license = "MIT"
repository = "https://github.com/fast-gateway-protocol/ollama"
authors = ["Wolfgang Schoenberger"]

[[bin]]
name = "fgp-ollama"
path = "src/main.rs"

[dependencies]
# FGP daemon SDK (local path for development)
fgp-daemon = { path = "../daemon" }

# HTTP client (disable default-tls to avoid OpenSSL for cross-compilation)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
clap = { version = "4", features = ["derive"] }
shellexpand = "3.1"
libc = "0.2"
daemonize = "0.5"
