[package]
name = "fgp-registry"
version = "0.1.0"
edition = "2021"
description = "FGP Skill Registry - canonical skill marketplace for AI coding agents"
license = "MIT"
repository = "https://github.com/fast-gateway-protocol/registry"
homepage = "https://github.com/fast-gateway-protocol"
keywords = ["skills", "registry", "ai-agents", "fgp", "marketplace"]
categories = ["development-tools", "database"]
authors = ["Wolfgang Schoenberger"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "tls-rustls"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# HTTP client (for GitHub API, SkillsMP API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Hashing (for skill_md integrity)
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"

# YAML parsing (for SKILL.md frontmatter)
serde_yaml = "0.9"

# Markdown parsing (optional, for extracting description)
pulldown-cmark = { version = "0.12", optional = true }

# URL handling
url = "2"

# Regex (for security scanning)
regex = "1"
lazy_static = "1"

# Base64 (for GitHub API content decoding)
base64 = "0.22"

# URL encoding
urlencoding = "2"

# CLI (optional)
clap = { version = "4", features = ["derive", "env"], optional = true }

# Environment
dotenvy = "0.15"

# HTTP API (optional)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"], optional = true }

[features]
default = []
cli = ["clap"]
api = ["axum", "tower", "tower-http", "clap"]
markdown-parse = ["pulldown-cmark"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"

[[bin]]
name = "fgp-registry"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "fgp-registry-api"
path = "src/api/main.rs"
required-features = ["api"]

[lib]
name = "fgp_registry"
path = "src/lib.rs"
