[package]
name = "fgp-resend"
version = "0.1.0"
edition = "2021"
description = "FGP daemon for Resend email API operations"
license = "MIT"
repository = "https://github.com/fast-gateway-protocol/resend"
authors = ["Wolfgang Schoenberger"]

[[bin]]
name = "fgp-resend"
path = "src/main.rs"

[dependencies]
fgp-daemon = { path = "../daemon" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
shellexpand = "3.1"
libc = "0.2"
daemonize = "0.5"
