[package]
name = "fgp-screen-time"
version = "1.0.0"
edition = "2021"
description = "FGP daemon for macOS Screen Time - fast access to app usage analytics via knowledgeC.db"
license = "MIT"
authors = ["Wolfgang Schoenberger"]
repository = "https://github.com/fast-gateway-protocol/screen-time"
homepage = "https://github.com/fast-gateway-protocol"
keywords = ["screentime", "usage", "macos", "daemon", "fgp"]
categories = ["os::macos-apis", "development-tools"]

[lib]
name = "fgp_screen_time"
path = "src/lib.rs"

[[bin]]
name = "fgp-screen-time"
path = "src/main.rs"

[[bin]]
name = "fgp-screen-time-daemon"
path = "src/bin/fgp-screen-time-daemon.rs"

[dependencies]
fgp-daemon = { path = "../daemon" }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0"
