[package]
name = "fgp-sqlite"
version = "0.1.0"
edition = "2021"
description = "FGP daemon for SQLite database operations"
license = "MIT"
repository = "https://github.com/fast-gateway-protocol/sqlite"
authors = ["Wolfgang Schoenberger"]

[[bin]]
name = "fgp-sqlite"
path = "src/main.rs"

[dependencies]
# FGP daemon SDK (local path for development)
fgp-daemon = { path = "../daemon" }

# SQLite with bundled (no system dependency)
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
clap = { version = "4", features = ["derive"] }
shellexpand = "3.1"
libc = "0.2"
daemonize = "0.5"
parking_lot = "0.12"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
