[package]
name = "fgp-supabase"
version = "0.1.0"
edition = "2021"
description = "FGP daemon for Supabase (Auth, Storage, Functions, Vectors, SQL)"
license = "MIT"
repository = "https://github.com/fast-gateway-protocol/supabase"
authors = ["Wolfgang Schoenberger"]

# CHANGELOG (recent first, max 5 entries)
# 01/15/2026 - Initial implementation (Claude)

[[bin]]
name = "fgp-supabase"
path = "src/main.rs"

[dependencies]
# FGP daemon SDK
fgp-daemon = { path = "../daemon" }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
clap = { version = "4", features = ["derive"] }
shellexpand = "3.1"
libc = "0.2"
daemonize = "0.5"
base64 = "0.22"
