[package]
name = "fgp-manager"
version = "0.1.0"
description = "FGP Daemon Manager - Menu bar app for managing FGP daemons"
authors = ["Wolfgang Schoenberger"]
edition = "2021"

[lib]
name = "fgp_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri with tray icon support
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"

# FGP daemon SDK (reuse existing crate)
fgp-daemon = { path = "../../daemon" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Directory paths
dirs = "5"

# macOS window vibrancy
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

